data/collection/fixes/descriptions/java/JDK-8014643
The following code will fail to compile:

class A {
  int b = 1;
}

class B extends A {
  int b = 12;

  int m() { return(super.b); } //<------------

  public static void main(String[] args) {
      System.out.println(new B().m());
  }
} 

Output:

Bug.java:8: error: illegal start of type
  int m() { return(super.b); }
                   ^
Bug.java:8: error: illegal start of expression
  int m() { return(super.b); }
                        ^
Bug.java:8: error: ';' expected
  int m() { return(super.b); }
                         ^
Bug.java:8: error: illegal start of expression
  int m() { return(super.b); }
                          ^
4 errors 